Configs for mui

--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -25,6 +25,6 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx", "pages/index.tsx", "pages/_app.js"
+    "**/*.tsx", "pages/index.tsx", "pages/_app.tsx"
   ]
 }
