--- a/website/package.json
+++ b/website/package.json
@@ -4,28 +4,48 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next -p 3002",
+    "dev": "nodemon",
     "build": "next build",
-    "start": "next start"
+    "watch": "node index.js",
+    "start": "NODE_ENV=production node index.js"
   },
   "author": "stanli",
   "license": "ISC",
+  "nodemonConfig": {
+    "ignore": [
+      "**/*.test.ts",
+      "**/*.spec.ts",
+      ".git",
+      "node_modules"
+    ],
+    "watch": [
+      "."
+    ],
+    "exec": "npm run watch",
+    "ext": "ts"
+  },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "express": "^4.17.1",
     "next": "^9.4.4",
+    "next-i18next": "^4.5.0",
     "react": "^16.13.1",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "sass": "^1.26.9"
+    "sass": "^1.26.9",
+    "ts-node": "^8.10.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.7",
+    "@types/next": "^9.0.0",
     "@types/node": "^14.0.14",
     "@types/react": "^16.9.41",
     "@types/react-redux": "^7.1.9",
+    "nodemon": "^2.0.4",
     "typescript": "^3.9.5"
   }
 }
