--- a/server/user/config/dev.env
+++ b/server/user/config/dev.env
@@ -9,3 +9,6 @@ AES_SECRET=abc123
 MONGO_URL=mongodb://iblog:iblog@lipohong.xyz:27017/iBlog?authSource=admin
 
 LOG_LEVEL=info
+
+FACEBOOK_APP_ID=614470885873864
+FACEBOOK_APP_SECRET=ffe8f5abc85fca4ae9c09863fddff743
