--- a/server/user/package.json
+++ b/server/user/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-useragent": "^1.0.13",
+    "lodash": "^4.17.19",
     "moment": "^2.24.0",
     "mongoose": "^5.9.2",
     "passport": "^0.4.1",
