--- a/website/package.json
+++ b/website/package.json
@@ -28,11 +28,13 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "express": "^4.17.1",
+    "https": "^1.0.0",
     "next": "^9.4.4",
     "next-i18next": "^4.5.0",
     "react": "^16.13.1",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
+    "react-facebook": "^8.1.4",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
