--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -6,6 +6,9 @@
       "dom.iterable",
       "es6"
     ],
+    "paths": {
+      "style/*": [ "assets/scss/*" ],
+    },
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
