--- a/website/package.json
+++ b/website/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "axios": "^0.19.2",
     "express": "^4.17.1",
     "https": "^1.0.0",
     "next": "^9.4.4",
