Update server, setup and test send email for user register

--- a/server/user/config/dev.env
+++ b/server/user/config/dev.env
@@ -1,14 +1,18 @@
 PORT=8010
 
-JWT_SECRET=abc123
-JWT_ISSUER=iBlog
-JWT_BCRYPT_SALT_ROUNDS=12
+JWT_SECRET=
+JWT_ISSUER=
+JWT_BCRYPT_SALT_ROUNDS=
 
-AES_SECRET=abc123
+AES_SECRET=
 
-MONGO_URL=mongodb://iblog:iblog@lipohong.xyz:27017/iBlog?authSource=admin
+MONGO_URL=
 
-LOG_LEVEL=info
+LOG_LEVEL=
 
-FACEBOOK_APP_ID=614470885873864
-FACEBOOK_APP_SECRET=ffe8f5abc85fca4ae9c09863fddff743
+FACEBOOK_APP_ID=
+FACEBOOK_APP_SECRET=
+
+EMAIL_USER=
+EMAIL_PASS=
+EMAIL_FROM=
