--- a/server/user/package.json
+++ b/server/user/package.json
@@ -38,6 +38,7 @@
     "lodash": "^4.17.19",
     "moment": "^2.24.0",
     "mongoose": "^5.9.2",
+    "nodemailer": "^6.4.10",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
