--- a/website/package.json
+++ b/website/package.json
@@ -4,33 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon",
+    "dev": "next -p 3003",
     "build": "next build",
     "watch": "node index.js",
-    "start": "SET NODE_ENV=production&& node index.js"
+    "start": "SET NODE_ENV=production&& next start"
   },
   "author": "stanli",
   "license": "ISC",
-  "nodemonConfig": {
-    "ignore": [
-      "**/*.test.ts",
-      "**/*.spec.ts",
-      ".git",
-      "node_modules"
-    ],
-    "watch": [
-      "."
-    ],
-    "exec": "npm run watch",
-    "ext": "ts"
-  },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "axios": "^0.19.2",
     "crypto-js": "^4.0.0",
-    "express": "^4.17.1",
     "https": "^1.0.0",
     "lodash": "^4.17.19",
     "next": "^9.4.4",
@@ -52,7 +38,6 @@
     "@types/node": "^14.0.14",
     "@types/react": "^16.9.41",
     "@types/react-redux": "^7.1.9",
-    "nodemon": "^2.0.4",
     "typescript": "^3.9.5"
   }
 }
