--- a/website/package.json
+++ b/website/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon",
     "build": "next build",
     "watch": "node index.js",
-    "start": "SET NODE_ENV=production&& node index.js"
+    "start": "SET NODE_ENV=production&& node index.js",
+    "start:mac": "next build && NODE_ENV=production node index.js"
   },
   "author": "stanli",
   "license": "ISC",
