--- a/website/package.json
+++ b/website/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^16.13.1",
     "react-facebook": "^8.1.4",
     "react-material-ui-form-validator": "^2.0.10",
+    "react-quill": "^1.3.5",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
