--- a/website/package.json
+++ b/website/package.json
@@ -32,17 +32,20 @@
     "axios": "^0.19.2",
     "crypto-js": "^4.0.0",
     "express": "^4.17.1",
+    "html-react-parser": "^0.13.0",
     "https": "^1.0.0",
     "lodash": "^4.17.19",
     "next": "^9.4.4",
     "next-i18next": "^4.5.0",
     "nodemon": "^2.0.4",
+    "quill-delta-to-html": "^0.12.0",
     "react": "^16.13.1",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-facebook": "^8.1.4",
     "react-material-ui-form-validator": "^2.0.10",
     "react-quill": "^1.3.5",
+    "react-quilljs": "^1.2.11",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
