--- a/website/package.json
+++ b/website/package.json
@@ -35,6 +35,7 @@
     "html-react-parser": "^0.13.0",
     "https": "^1.0.0",
     "lodash": "^4.17.19",
+    "moment": "^2.27.0",
     "next": "^9.4.4",
     "next-i18next": "^4.5.0",
     "nodemon": "^2.0.4",
