--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.0.0",
     "@nuxtjs/axios": "^5.12.2",
+    "cookie": "^0.4.1",
+    "js-cookie": "^2.2.1",
     "nuxt": "^2.14.6",
     "nuxt-i18n": "^6.15.1"
   },
