--- a/web/package.json
+++ b/web/package.json
@@ -9,8 +9,12 @@
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.0.0",
     "@nuxtjs/axios": "^5.12.2",
+    "axios": "^0.20.0",
     "cookie": "^0.4.1",
+    "crypto-js": "^4.0.0",
+    "dotenv": "^8.2.0",
     "js-cookie": "^2.2.1",
+    "lodash": "^4.17.20",
     "nuxt": "^2.14.6",
     "nuxt-i18n": "^6.15.1"
   },
