--- a/web/package.json
+++ b/web/package.json
@@ -16,7 +16,8 @@
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "nuxt": "^2.14.6",
-    "nuxt-i18n": "^6.15.1"
+    "nuxt-i18n": "^6.15.1",
+    "vue-quill-editor": "^3.0.6"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.6",
