--- a/web/package.json
+++ b/web/package.json
@@ -12,11 +12,13 @@
     "axios": "^0.20.0",
     "cookie": "^0.4.1",
     "crypto-js": "^4.0.0",
+    "dayjs": "^1.9.3",
     "dotenv": "^8.2.0",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "nuxt": "^2.14.6",
     "nuxt-i18n": "^6.15.1",
+    "quill-delta-to-html": "^0.12.0",
     "vue-quill-editor": "^3.0.6"
   },
   "devDependencies": {
