--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "crypto-js": "^4.0.0",
     "dayjs": "^1.9.3",
     "dotenv": "^8.2.0",
+    "html-to-text": "^5.1.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "nuxt": "^2.14.6",
