--- a/web/package.json
+++ b/web/package.json
@@ -4,7 +4,7 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "generate": "nuxt generate",
-    "start": "nuxt start"
+    "start": "nuxt build && nuxt start"
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.0.0",
@@ -12,17 +12,17 @@
     "axios": "^0.20.0",
     "cookie": "^0.4.1",
     "crypto-js": "^4.0.0",
-    "dayjs": "^1.9.3",
+    "dayjs": "^1.9.4",
     "dotenv": "^8.2.0",
     "html-to-text": "^5.1.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
-    "nuxt": "^2.14.6",
-    "nuxt-i18n": "^6.15.1",
+    "nuxt": "^2.14.7",
+    "nuxt-i18n": "^6.15.4",
     "vue-quill-editor": "^3.0.6"
   },
   "devDependencies": {
-    "@nuxt/types": "^2.14.6",
+    "@nuxt/types": "^2.14.7",
     "@nuxt/typescript-build": "^2.0.3",
     "@nuxtjs/vuetify": "^1.11.2"
   }
