--- a/web/.env.development
+++ b/web/.env.development
@@ -4,3 +4,4 @@ USER_API=http://localhost:8010/api
 FILE_API=http://localhost:8011/api
 BLOG_API=http://localhost:8012/api
 COMMENT_API=http://localhost:8013/api
+GOOGLE_FILE_LINK=https://drive.google.com/uc?id=
