--- a/server/user/package.json
+++ b/server/user/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "watch": "nodemon",
     "start": "node -r ts-node/register ./server.ts"
   },
@@ -49,10 +49,15 @@
     "uuid": "^3.4.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-proposal-decorators": "^7.12.12",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.7",
     "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
+    "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.149",
     "@types/mongoose": "^5.7.1",
     "@types/node": "^13.7.4",
@@ -61,6 +66,8 @@
     "@types/passport-local": "^1.0.33",
     "@types/request": "^2.48.4",
     "@types/uuid": "^3.4.7",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.2",
     "ts-node": "^8.6.2",
     "typescript": "^3.8.2"
