--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.0.0",
     "@nuxtjs/axios": "^5.12.2",
+    "@nuxtjs/dayjs": "^1.3.1",
     "axios": "^0.20.0",
     "cookie": "^0.4.1",
     "crypto-js": "^4.0.0",
