--- a/web-react/package.json
+++ b/web-react/package.json
@@ -13,6 +13,10 @@
     "next-i18next": "^8.5.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
     "sass": "^1.36.0"
   },
   "devDependencies": {
