Update server, add container name for docker compose yml file

--- a/server/blog/docker-compose.yml
+++ b/server/blog/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3"
 services:
   iblog-blog-server:
+    container_name: ireview-blog-server
     build: .
     ports: 
       - "8012:8012"
