--- a/server/file/docker-compose.yml
+++ b/server/file/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3"
 services:
   iblog-file-server:
+    container_name: ireview-file-server
     build: .
     ports: 
       - "8011:8011"
